# AGoT

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
modules/: __init__.py  base.py  graph.py  layer.py  node.py
process/: __init__.py  _process_functions.py  main_alg.py
