[project]
name = "agot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
lint.select = ["ALL"] # Enable all available linters

lint.ignore = [
    "TD002",
    "TD003",
    "D101",
    "CPY",
    "RUF003",
    "RUF002",
    "RUF001",
] # Im not sure i want to explain all of this

preview = true # Enable preview features

# My personal preferences
line-length = 88
indent-width = 4

[tool.ruff.lint.pylint]
max-locals = 20
lint.pylint.max-positional-args = 6

[tool.mypy] # Mypy configuration required for type checking
python_version = "3.13"
strict = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

disable_error_code = "no-any-return"
